# fastfile

./: .env  Cargo.toml  README.md  index.html
src/: app.rs  error.rs  main.rs
src/pages/: home.rs  login.rs
src/routes/: mod.rs  router.rs
src/services/: auth.rs  mod.rs  requests.rs
src/types/: auth.rs  mod.rs
